@@ -1,3 +1,7 @@
+8/2001 eliminated Numerical Recipes in C (Markus Neteler)
+
+--------------------------
+
 The following problem has been corrected for Linux:
 
 OBJ.linux/param.o: In function Param':
